尝试将代码从swing转向javafx